# catex

./: README.md  pyproject.toml
experiment/: goal.py
src/catex/: __init__.py
src/catex/experiment/: __init__.py  generate.py  visualize.py
src/catex/model/: __init__.py  cellular_automata.py  goal.py
src/catex/utils/: __init__.py  display.py  loss.py
