[project]
name = "catex"
version = "0.1.0"
description = "Texture generation with Neural Cellular Automatas"
authors = [{ name = "Magsen Chebini", email = "magsen.che@gmail.com" }]
dependencies = [
    "black>=24.3.0",
    "catex @ file:///${PROJECT_ROOT}/",
    "ipykernel>=6.29.4",
    "matplotlib>=3.8.3",
    "einops>=0.7.0",
    "numpy>=1.26.4",
    "tqdm>=4.66.2",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "scikit-learn>=1.4.1.post1",
]
requires-python = "==3.9.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
_.env_file = ".env"
exp = "python3 experiment/main.py"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
